Refactor configurations